style.css
/* ... */
.hero-desc {
    font-family: var(--font-Euclid);
    font-weight: 400;

    font-size: 20px;
    line-height: 120%;
    letter-spacing: 0%;
    color: #FFFFFF;
    width: 442px;
    padding-left: 68px;
    margin-bottom: 44px;
}

.title-btn {
    font-family: var(--font-Euclid);
    font-weight: 500;
    font-style: Medium;
    font-size: 16px;
    line-height: 16px;
    letter-spacing: 0%;
    color: #FFFFFF;
    padding-left: 68px;
}

.hero-horizontal-buttons {
    display: flex;
    gap: 12px;
    padding-left: 68px;
    margin-bottom: 41px;
}

.hero-buy-button-mexc {
    width: 140px;
    height: 56px;
    border-radius: 8px;
    font-family: var(--font-Euclid);
    font-weight: 500;
    font-style: Medium;
    font-size: 20px;
    line-height: 16px;
    letter-spacing: 0%;
    color: #38484E;
    border: none;
    display: flex;
    align-items: center;
    gap: 10px;
    justify-content: center;
    cursor: pointer;
    background: #FFFFFF;
}

.hero-buy-button-quickswap {
    width: 189px;
    height: 56px;
    border-radius: 8px;
    font-family: var(--font-Euclid);
    font-weight: 500;
    font-style: Medium;
    font-size: 20px;
    line-height: 16px;
    letter-spacing: 0%;
    color: #38484E;
    border: none;
    display: flex;
    align-items: center;
    gap: 10px;
    justify-content: center;
    cursor: pointer;
    background: #FFFFFF;

}


.hero-community {
    padding-left: 68px;
}

.hero-com-btn {
    display: flex;
    gap: 12px;
}

.hero-community-button {
    background: transparent;
    border: 1px solid #FFFFFF;
    border-radius: 6px;
    font-family: var(--font-Euclid);
    font-weight: 500;
    font-style: Medium;
    font-size: 16px;
    line-height: 16px;
    letter-spacing: 0%;
    color: #FFFFFF;
    display: flex;
    align-items: center;
    gap: 10px;
    height: 56px;
    justify-content: center;
    cursor: pointer;
}



/* Dapp Section */
.dapp-bg {
    background: #F5F9FA;
    
    

    
    clip-path: polygon(0 0, 100% 0, 100% 82%, 0% 99%);
    margin-top: -100px;

}


.gamesta-dapp-container {
    max-width: 1440px;
    margin: 0 auto;
    padding: 223px 195px 212.79px 132px;
    position: relative;



}

.dapp-launch-group-container h6 {
    font-family: var(--font-Euclid);
    font-weight: 500;
    font-style: Medium;
    font-size: 20px;
    line-height: 16px;
    letter-spacing: 0%;
    padding: 9.63px 8.5px;
    background: #00B3E8;
    color: #FFFFFF;
    margin: 0;
    border: none;
}



.dapp-decoration-svg {
    position: absolute;
    width: 359px;
    top: 26%;
    left: -4%;
}

.dapp-card-description {
    font-family: var(--font-abz);
    font-weight: var(--font-base-weight);
    font-size: 16px;
    line-height: 130%;
    letter-spacing: 0%;
    color: #38484E;


}

.dapp-launch-group-container {
    position: absolute;
    top: 24%;
    right: 23%;
    width: 184px;
    transform: rotate(-6deg);
}

.launch-status-container {
    width: 154px;
    text-align: center;
}

.launch-quarter-box {
    width: 113px;
    margin-left: 35% !important;
    border: none;
    margin-top: -3%;
    text-align: center;
}

.dapp {
    font-family: var(--font-neue-machina);
    font-weight: 900;
    font-style: Black;
    font-size: 64px;
    line-height: 100%;
    letter-spacing: 0.1em;
    text-align: start;
    padding-left: 15%;
    text-transform: uppercase;
    color: var(--font-primary-font-color);
    position: relative;
    margin-bottom: 11px;
}

.dapp-intro-paragraph {
    font-family: var(--font-Euclid);
    font-weight: 400;
    max-width: 658px;
    font-size: 24px;
    line-height: 140%;
    letter-spacing: 0%;
    color: var(--font-primary-font-color);
    padding-left: 15%;
    
    margin-top: 0;
    margin-bottom: 0;
}

.dapp-card-container {
    margin: 0 auto;
    padding: 56px 0 0 0;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    column-gap: 110px;
    row-gap: 67px;
}

.dapp-card {
    display: flex;
    align-items: top;
    max-width: 490px;
    gap: 24px;
}

.dapp-icon {
    width: 24px;
    height: 24px;
    padding: 20px;
    background-color: #FFFFFF;
    border-radius: 8px;
    box-shadow: 0px 7px 12px 0px #00B3E80D;

}

.dapp-card-title {
    font-family: var(--font-neue-machina);
    font-weight: 800;
    font-size: 28px;
    line-height: 100%;
    letter-spacing: 0%;
    color: #00B3E8;
    margin: 0;

}



/* Future Applications */
.future-container {
    max-width: 1440px;
    margin: 0 auto;
    padding: 0 206px 0 169px;
}

.future-title {
    font-family: var(--font-neue-machina-normal);
    font-weight: 500;
    font-style: Medium;
    font-size: 96px;
    line-height: 100%;
    letter-spacing: 0%;
    text-align: right;
    color: var(--font-primary-font-color);
    max-width: 643px;
    margin-top: 49.21px;
    margin-bottom: 29px;
}

.future-applications-button-wrapper {
    max-width: 643px;
    text-align: right;
}

.future-btn {
    padding: 20px 24px;
    font-family: var(--font-Euclid);
    font-weight: 500;
    font-style: Medium;
    font-size: 16px;
    line-height: 16px;
    letter-spacing: 0%;
    color: #FFFFFF;
    background: linear-gradient(96.42deg, #06C5C1 17.88%, #009FEA 96.71%);
    box-shadow: 0px 7px 12px 0px #00B3E830;
    border-radius: 6px;
    border: none;
    cursor: pointer;
    transition: all 0.3s ease;
}

.future-btn:hover {
    transform: translateY(-2px);
    box-shadow: 0px 10px 20px 0px #00B3E860;
    filter: brightness(1.1);
}

.future-card-container {
    
    padding-left: 80px;
    margin-bottom: 425px;
    display: flex;
    
    position: relative;
}

.future-app-card-fund {
    position: absolute;
    top: 46%;
    left: 32%;
    box-shadow:
        5px 35px 20px -30px rgba(210, 66, 170, 0.3),
        0 10px 0px -15px rgba(39, 58, 65, 0.2),
        0 0 0px -10px rgba(255, 234, 249, 0.5);
}
/* ... */

